syntax = "proto3";

package stub;

option go_package = "data-handler/stub";

import 'model/workspace.proto';
import 'model/error.proto';
import 'model/token.proto';

service WorkSpaceService {
  rpc Create(CreateWorkspaceRequest) returns (CreateWorkspaceResponse) {}
  rpc List(ListWorkspaceRequest) returns (ListWorkspaceResponse) {}
  rpc Update(UpdateWorkSpaceRequest) returns (UpdateWorkSpaceResponse) {}
  rpc Delete(DeleteWorkSpaceRequest) returns (DeleteWorkSpaceResponse) {}
  rpc Get(GetWorkSpaceRequest) returns (GetWorkSpaceResponse) {}
}

message ListWorkspaceRequest {
  string token = 1;
}

message ListWorkspaceResponse {
  int32 total = 1;
  repeated model.Workspace content = 2;

  model.Error error = 3;
}

message CreateWorkspaceRequest {
  string token = 1;
  repeated model.Workspace workspaces = 2;
}

message CreateWorkspaceResponse {
  repeated model.Workspace workspaces = 1;

  model.Error error = 2;
}

message UpdateWorkSpaceRequest {
  string token = 1;
  repeated model.Workspace workspaces = 2;
}

message UpdateWorkSpaceResponse {
  repeated model.Workspace workspaces = 1;

  model.Error error = 2;
}

message DeleteWorkSpaceRequest {
  string token = 1;
  repeated model.Workspace workspaces = 2;
}

message DeleteWorkSpaceResponse {
  repeated model.Workspace workspaces = 1;

  model.Error error = 2;
}

message GetWorkSpaceRequest {
  string token = 1;
  string name = 2;
}

message GetWorkSpaceResponse {
  repeated model.Workspace workspaces = 1;

  model.Error error = 2;
}